--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -3,6 +3,7 @@ imports:
     - { resource: security.yml }
     - { resource: services.yml }
     - { resource: "@InfrastructureBundle/Resources/config/services.yml" }
+    - { resource: "@PresentationBundle/Resources/config/services.yml" }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
@@ -60,7 +61,13 @@ doctrine:
     orm:
         auto_generate_proxy_classes: '%kernel.debug%'
         naming_strategy: doctrine.orm.naming_strategy.underscore
-        auto_mapping: true
+        auto_mapping: false
+        mappings:
+          Domain:
+            type: yml
+            prefix: Domain\Model\User
+            dir: %kernel.root_dir%/../src/InfrastructureBundle/Resources/config/doctrine
+            is_bundle: false
 
 # Swiftmailer Configuration
 swiftmailer:
