--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
         "twig/twig": "^1.0||^2.0"
     },
     "require-dev": {
-        "sensio/generator-bundle": "^3.0"
+        "sensio/generator-bundle": "^3.0",
+        "phpunit/phpunit": "^5.5"
     },
     "scripts": {
         "symfony-scripts": [
