list and create user - console commands

--- a/src/InfrastructureBundle/Resources/config/doctrine/User.orm.yml
+++ b/src/InfrastructureBundle/Resources/config/doctrine/User.orm.yml
@@ -8,3 +8,10 @@ Domain\Model\User\User:
         email:
             type: string
             length: 150
+        twitterAccount:
+            type: string
+            length: 50
+        createdAt:
+            type: datetime
+        updatedAt:
+            type: datetime
